Part 1:Edit HTML completed

--- a/web/home.html
+++ b/web/home.html
@@ -15,10 +15,17 @@
 	</nav>
 
 	<content>
-		<h1>Welcome to this little website.</h1>
+		<p>Hello World</p>
 		<!-- insert hello world here -->
 
-		<img src="https://pbs.twimg.com/profile_images/1267905793610772480/rks7KARB_400x400.jpg">
+		<img src="https://images.unsplash.com/photo-1559715541-5daf8a0296d0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=986&q=80">
+
+		<p>Welcome to our website!</p>
+		<ul>
+			<li>You is kind.</li>
+			<li>You is smart.</li>
+			<li>You is important.</li>
+		  </ul
 
 		<h2>Contact Us</h2>
 		<form id="contact">
@@ -27,6 +34,13 @@
 
 			Message:
 			<input type="textarea">
+
+			How did you hear about us?:
+			<br>
+			<br>
+			<label for="option1">Google<input type="checkbox" id="option1" </label><br>
+			<label for="option2">A friend<input type="checkbox" id="option2" </label><br>
+			<label for="option3">Other<input type="checkbox" id="option3" </label><br>
 
 			<input type="submit">
 
