--- a/web/home.html
+++ b/web/home.html
@@ -18,7 +18,7 @@
 		<p>Hello World</p>
 		<!-- insert hello world here -->
 
-		<img src="https://images.unsplash.com/photo-1559715541-5daf8a0296d0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=986&q=80">
+		<img id='rubber-duck' src="https://images.unsplash.com/photo-1559715541-5daf8a0296d0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=986&q=80">
 
 		<p>Welcome to our website!</p>
 		<ul>
