Part 3:Create HTML Page set up and Part 4: Create Interactive Components completed

--- a/web/profile.html
+++ b/web/profile.html
@@ -1,6 +1,71 @@
-Not implemented yet! 
+<!-- Not implemented yet!  -->
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Profile</title>
+	<link href="styles.css" rel="stylesheet">
+
+</head>
+<body>
+	<nav>
+		<ol>
+	        <li class="crumb"><a href="./home.html">Home</a></li>
+	        <li class="crumb"><a href="./profile.html">Profile</a></li>
+	        <li class="crumb"><a href="./about.html">About</a></li>
+	    </ol>
+	</nav>
 
 <br>
 <br>
 
+<h1>All About E!</h1>
+<br>
+<br>
+<br>
+<br>
+<h2>Edrea Handy Robinson</h2>
+    <p>
+        <button id="color">My Favorite Color</button>
+        <button id="place">My Favorite Place</button>
+        <button id="ritual">My Favorite Ritual</button>   
+    </p>
+<br>
+<br>
+
+<h3>Interests</h3>
+<p>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</p>
+<br>
+<br>
+<h3>Skills</h3>
+<p>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</p>
+<br>
+<br>
+<h3>Career Goals</h3>
+    <p>
+        
+    </p>    
+<br>
+<br>
+<br>
+<br>
 <a href="./home.html"><< Back </a>
+
+<script src="profile.js"></script>
+
+</body>
+</html>
