Part 5:Stylize buttons completed

--- a/web/profile.html
+++ b/web/profile.html
@@ -26,9 +26,9 @@
 <br>
 <h2>Edrea Handy Robinson</h2>
     <p>
-        <button id="color">My Favorite Color</button>
-        <button id="place">My Favorite Place</button>
-        <button id="ritual">My Favorite Ritual</button>   
+        <button class="button" id="color">My Favorite Color</button>&nbsp;
+        <button class="button" id="place">My Favorite Place</button>&nbsp;
+        <button class="button" id="ritual">My Favorite Ritual</button>   
     </p>
 <br>
 <br>
