Part 3:Create HTML Page completed

--- a/web/profile.html
+++ b/web/profile.html
@@ -13,50 +13,51 @@
 	        <li class="crumb"><a href="./home.html">Home</a></li>
 	        <li class="crumb"><a href="./profile.html">Profile</a></li>
 	        <li class="crumb"><a href="./about.html">About</a></li>
+            <li class="crumb"><a href="./neighborhood.html">My Neighborhood</a></li>
 	    </ol>
 	</nav>
 
 <br>
-<br>
 
 <h1>All About E!</h1>
-<br>
-<br>
+<img id='Edrea' src="C:\Users\Edrea\Desktop\Perficient - Devmountain\3 - Week 3\Assessment\web\AllAboutE0921.jpg">
 <br>
 <br>
 <h2>Edrea Handy Robinson</h2>
-    <p>
-        <button class="button" id="color">My Favorite Color</button>&nbsp;
-        <button class="button" id="place">My Favorite Place</button>&nbsp;
-        <button class="button" id="ritual">My Favorite Ritual</button>   
-    </p>
-<br>
+<p>I was born, raised, and currently reside in Lafayette, LA.  I have been married to my amazing husband, Cameron, for almost 8 years.<br><br>I spent 7 years as a financial accountant and analyst in the oil & gas, telecommunications, and medical industries.  For the past year and a half, I have been a full-time dog breeder with my own kennel, Silver Charm Frenchies.<br><br>I am currently a student of Perficient's Bright Paths program, learning the skills to become a software engineer.
+  
+</p>
 <br>
 
 <h3>Interests</h3>
 <p>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>I love dogs and am a French Bulldog enthusiast</li>&nbsp;
+        <li>I love gardening</li>&nbsp;
+        <li>I love traveling</li>&nbsp;
+        <li>I love taking pictures of beautiful landscapes</li>
     </ul>
-</p>
 <br>
+<br>
+<br>
+<button class="button" id="color">My Favorite Color</button>&nbsp;
+<button class="button" id="place">My Favorite Place</button>&nbsp;
+<button class="button" id="ritual">My Favorite Ritual</button> 
+</p>
 <br>
 <h3>Skills</h3>
 <p>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Exceptional communication, organizational, multitasking, time management, and problem-solving skills</li>&nbsp;
+        <li>Expert in both learning and teaching complex concepts and maintaining a clear and open line of communication with various levels of staff and management</li>&nbsp;
+        <li>7 years of financial accounting and analysis experience</li>&nbsp;
+        <li>10 years of staff supervision and training experience</li>&nbsp;
+        <li>10 years of customer service experience</li>
     </ul>
 </p>
 <br>
-<br>
 <h3>Career Goals</h3>
-    <p>
+    <p>I am currently working to transition my career into the technology industry.  Upon completion of the coding bootcamp, I will begin my career as some type of developer or analyst.  Eventually, I would like to move into a position that will allow my success to benefit from all of my prior skills and experience.
         
     </p>    
 <br>
