Extra Credit completed

--- a/web/neighborhood.html
+++ b/web/neighborhood.html
@@ -24,46 +24,31 @@
 <br>
 <p>
     Lafayette is at the heart of Louisiana’s Cajun & Creole Country, an area known as the Happiest City in America. Their history dates back to the 18th century, when Canada’s Acadians were expelled and settled in Louisiana. More than two centuries later tourists visit for a rare taste of the genuine Acadian experience.<br><br>Lafayette has a distinct culinary identity as the epicenter of Cajun cuisine that’s earned them the title Best Food City in the USA. Lafayette’s culinary scene is steeped in tradition and continues to evolve with a new generation of chefs making it an incredible place to eat.<br><br>No matter what time of year you visit Lafayette they will have something for you to celebrate. It doesn’t take long to get hooked on Lafayette’s Cajun and Zydeco music and there’s never a shortage of dance partners if you want to try your hand at a two-step or waltz.<br><br>Whether your passion is for their rich cultural history, the bustling culinary scene or distinctive blend of Cajun and Zydeco music, you can be sure you will leave with a smile on your face.
-    <!-- <button class="button" id="color">My Favorite Color</button>&nbsp;
-    <button class="button" id="place">My Favorite Place</button>&nbsp;
-    <button class="button" id="ritual">My Favorite Ritual</button>    -->
+  
 </p>
 <br>
 <br>
 
-<h3>Interests</h3>
+<h3>My Favorite Restaurants</h3>
 <p>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li class="restaurant"><a href="https://lafayettereceptionsandcatering.com/">Abacus</a> - Cajun & Creole buffet offering a large variety of soups, salads, deserts, and home style main courses. Sunday Brunch ends the week with food topped with breakfast and lunch options as well as live music for dancing.</li><br>
+        <li class="restaurant"><a href="https://www.grazeacadiana.com/">Graze Acadiana</a> - Luscious cheese and Charcuterie boards. In boxes, on platters and Grazing tables. Locally sourced and eco-friendly packaging. For all life's special moments. Gather and Graze.</li><br>
+        <li class="restaurant"><a href="https://www.facebook.com/PataconLLC/">Patacon Latin Cuisine</a> - Venezuelan cuisine filled with mouth-watering flavors that will leave you wanting more!.</li><br>
+        <li class="restaurant"><a href=http://www.popspoboys.com/">Pop's Poboys</a> - Old school classics and exciting twists on Louisiana's favorite sandwich plus starters, salads, sides, sweets AND refreshing beverages all in a classic setting. Poboys you will like, delightfully prepared in beautiful downtown Lafayette.</li>
     </ul>
 </p>
 <br>
-<br>
-<h3>Skills</h3>
 <p>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-</p>
-<br>
-<br>
-<h3>Career Goals</h3>
-    <p>
-        
-    </p>    
+    <button class="button" id="recommendation">My Recommendation</button> 
+</p>    
 <br>
 <br>
 <br>
 <br>
 <a href="./home.html"><< Back </a>
 
-<script src="profile.js"></script>
+<script src="neighborhood.js"></script>
 
 </body>
 </html>
