--- a/web/home.html
+++ b/web/home.html
@@ -11,7 +11,7 @@
 	        <li class="crumb"><a href="./home.html">Home</a></li>
 	        <li class="crumb"><a href="./profile.html">Profile</a></li>
 	        <li class="crumb"><a href="./about.html">About</a></li>
-			<li class="crumb"><a href="./neighborhood.html">My Neighborhood</a></li>
+			<li class="crumb"><a href="./neighborhood.html">All About Lafayette</a></li>
 	    </ol>
 	</nav>
 
@@ -26,15 +26,15 @@
 			<li>You is kind.</li>
 			<li>You is smart.</li>
 			<li>You is important.</li>
-		  </ul
-
+		</ul>
+		 
 		<h2>Contact Us</h2>
 		<form id="contact">
 			Your name:
-			<input type="text">
+			<input type="text"><br>
 
 			Message:
-			<input type="textarea">
+			<input type="textarea"><br>
 
 			How did you hear about us?:
 			<br>
