--- a/web/neighborhood.html
+++ b/web/neighborhood.html
@@ -32,10 +32,10 @@
 <h3>My Favorite Restaurants</h3>
 <p>
     <ul>
-        <li class="restaurant"><a href="https://lafayettereceptionsandcatering.com/">Abacus</a> - Cajun & Creole buffet offering a large variety of soups, salads, deserts, and home style main courses. Sunday Brunch ends the week with food topped with breakfast and lunch options as well as live music for dancing.</li><br>
-        <li class="restaurant"><a href="https://www.grazeacadiana.com/">Graze Acadiana</a> - Luscious cheese and Charcuterie boards. In boxes, on platters and Grazing tables. Locally sourced and eco-friendly packaging. For all life's special moments. Gather and Graze.</li><br>
-        <li class="restaurant"><a href="https://www.facebook.com/PataconLLC/">Patacon Latin Cuisine</a> - Venezuelan cuisine filled with mouth-watering flavors that will leave you wanting more!.</li><br>
-        <li class="restaurant"><a href=http://www.popspoboys.com/">Pop's Poboys</a> - Old school classics and exciting twists on Louisiana's favorite sandwich plus starters, salads, sides, sweets AND refreshing beverages all in a classic setting. Poboys you will like, delightfully prepared in beautiful downtown Lafayette.</li>
+        <li class="restaurant"><a href="https://lafayettereceptionsandcatering.com/" target="_blank">Abacus</a> - Cajun & Creole buffet offering a large variety of soups, salads, deserts, and home style main courses. Sunday Brunch ends the week with food topped with breakfast and lunch options as well as live music for dancing.</li><br>
+        <li class="restaurant"><a href="https://www.grazeacadiana.com/" target="_blank">Graze Acadiana</a> - Luscious cheese and Charcuterie boards. In boxes, on platters and Grazing tables. Locally sourced and eco-friendly packaging. For all life's special moments. Gather and Graze.</li><br>
+        <li class="restaurant"><a href="https://www.facebook.com/PataconLLC/" target="_blank">Patacon Latin Cuisine</a> - Venezuelan cuisine filled with mouth-watering flavors that will leave you wanting more!.</li><br>
+        <li class="restaurant"><a href="https://www.popspoboys.com/" target="_blank">Pop's Poboys</a> - Old school classics and exciting twists on Louisiana's favorite sandwich plus starters, salads, sides, sweets AND refreshing beverages all in a classic setting. Poboys you will like, delightfully prepared in beautiful downtown Lafayette.</li>
     </ul>
 </p>
 <br>
