--- a/web/profile.html
+++ b/web/profile.html
@@ -13,7 +13,7 @@
 	        <li class="crumb"><a href="./home.html">Home</a></li>
 	        <li class="crumb"><a href="./profile.html">Profile</a></li>
 	        <li class="crumb"><a href="./about.html">About</a></li>
-            <li class="crumb"><a href="./neighborhood.html">My Neighborhood</a></li>
+            <li class="crumb"><a href="./neighborhood.html">All About Lafayette</a></li>
 	    </ol>
 	</nav>
 
